--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                                    <i class="fab fa-github"></i>
                               </a>
                               <a href="tg://resolve?domain=Anjana_Ma" class="icon">
-                                   <i class="fab fa-telegram"></i>
+                                   <i class="fab fa-telegram-plane"></i>
                               </a>
                               <a href="https://youtube.com/c/AnjanaMaduu" class="icon" target="_blank">
                                    <i class="fab fa-youtube"></i>
                               </a>
-                              <a href="https://twitter.com/Anjana__Madu" class="icon" target="_blank">
-                                   <i class="fab fa-twitter"></i>
+                              <a href="https://www.instagram.com/anjana.madu/" class="icon" target="_blank">
+                                   <i class="fab fa-instagram"></i>
                               </a>
                               <a href="https://ko-fi.com/AnjanaMadu" class="icon" target="_blank">
                                    <i class="fa fa-coffee" aria-hidden="true"></i>
