--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                          <div class="about-container">
                               <h3 class="title">About</h3>
                               <p class="text">
-                                   Noob Coder. • Python | JS | PHP 💖
+                                   Noob Coder. • Python | Go | JS | PHP 💖
                                    <br>
                                    Github has <span id="followers_count"></span> followers.
                               </p>
