--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                </div>
           </div>
      </div>
-     <script src="https://cdn.jsdelivr.net/gh/cachecleanerjeet/contact-form@master/src/contact-form.min.js"
-          id="contactform" form_worker_url="https://contactform.harp.workers.dev/"></script>
-     <script src="src/app.js"></script>
+     <script type="text/javascript" src="src/app.js"></script>
      <script type="text/javascript">
           var followers = document.getElementById("followers_count");
           var data = fetch("https://api.github.com/users/AnjanaMadu")
