--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
                          <div class="about-container">
                               <h3 class="title">About</h3>
                               <p class="text">
-                                   Noob Coder. • Python | Go | JS | PHP 💖
+                                   Noob Coder. • Python | Go | JS | PHP 
+                                   <a target="_blank" href="https://go.dev/">Go</a> | 
+                                   <a target="_blank" href="https://www.python.org/">Python</a> | 
+                                   <a target="_blank" href="https://nodejs.org/en/">NodeJS</a> | 
+                                   <a target="_blank" href="https://www.php.net/">PHP</a> | 
+                                   <a target="_blank" href="https://www.java.com/en/">Java</a> 💖
                                    <br>
                                    Github has <span id="followers_count"></span> followers.
                               </p>
