--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                    <a target="_blank" href="https://www.php.net/">PHP</a> | 
                                    <a target="_blank" href="https://www.java.com/en/">Java</a> 💖
                                    <br>
-                                   Github has <span id="followers_count"></span> followers.
+                                   <span id="followers_count"></span> followers in github.
                               </p>
                          </div>
                          <div class="icons-container">
