--- a/index.html
+++ b/index.html
@@ -64,12 +64,7 @@
                          <div class="about-container">
                               <h3 class="title">About</h3>
                               <p class="text">
-                                   Noob Coder. • 
-                                   <a target="_blank" href="https://go.dev/">Go</a> | 
-                                   <a target="_blank" href="https://www.python.org/">Python</a> | 
-                                   <a target="_blank" href="https://nodejs.org/en/">NodeJS</a> | 
-                                   <a target="_blank" href="https://www.php.net/">PHP</a> | 
-                                   <a target="_blank" href="https://www.java.com/en/">Java</a> 💖
+                                   Noob Coder. • Golang | Python | NodeJS | PHP | Java 💖
                                    <br>
                                    <span id="followers_count"></span> followers in github.
                               </p>
