--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                </div>
           </div>
      </div>
+     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="anjanamadu" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF5F5F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
      <script type="text/javascript" src="src/app.js"></script>
      <script type="text/javascript">
           var followers = document.getElementById("followers_count");
