--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                               <a href="https://youtube.com/c/AnjanaMaduu" class="icon" target="_blank">
                                    <i class="fab fa-youtube"></i>
                               </a>
-                              <a href="https://www.instagram.com/anjana.madu/" class="icon" target="_blank">
+                              <a href="https://www.instagram.com/0x32Anjana/" class="icon" target="_blank">
                                    <i class="fab fa-instagram"></i>
                               </a>
                               <a href="https://ko-fi.com/AnjanaMadu" class="icon" target="_blank">
